--- a/disneyplus/disneyplus.css
+++ b/disneyplus/disneyplus.css
@@ -13,22 +13,28 @@ body{
     background-size: cover;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
-/*div{
+div{
     padding-bottom: 50em;
-}*/
+}
+
+.box{
+    display: flex;
+}
 
 .logo{
     max-width: 20em;
-    margin: 1.5em;
+    margin: 1.5em; 
+    
 }
 
 .hero-content{
-    padding-left: 6em;
-    text-align: center;
-    height: 45vh;
+    width: 100%; 
+    height: 100%; 
+    display: flex;
 }
 
 .oferta-combo{
@@ -44,7 +50,6 @@ body{
     display: inline-flex;
     justify-content: center;
     text-align: center;
-    transition: all .2s ease 0s;
     font-family: "Avenir Roman", sans-serif;
     font-size: 1.2em;
     letter-spacing: .08em;
@@ -55,18 +60,152 @@ body{
     color: #f9f9f9;
     text-align: inherit;
     font-size: 1em;
-    /*line-height: 26px;*/
-    font-family: Avenir,sans-serif;
+    font-family: "Avenir Roman", sans-serif;
     font-weight: 350;
     letter-spacing: .05em;
     text-decoration: underline;
 }
 
+.button1{
+    color: #f9f9f9;
+    background: #000e;
+    border-style: solid;
+    border-color: #f9f9f9;
+    height: 3em;
+    width: 6em;
+    margin: 2em;
+    align-items: center;
+    border-radius: .2em;
+    box-sizing: border-box;
+    display: inline-flex;
+    justify-content: center;
+    text-align: center;
+    font-family: "Avenir Roman", sans-serif;
+    font-size: 1.2em;
+    letter-spacing: .08em;
+    text-transform: uppercase;
+}
+
+.card-plano{
+    color: #f9f9f9c9;
+    font-family: "Avenir Roman", sans-serif;
+    font-size: 1.2em;
+    text-align: center;
+    align-items: center;
+    line-height: 1.8;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    box-sizing: border-box;
+    height: auto;
+    max-width: 380px;
+    padding: 60px 40px 0;
+}
+
+.button2{
+    background: #6525fc;
+    height: 2.5em;
+    width: 16em;
+    margin-bottom: 9em;
+    margin: 1em;
+    color: #f9f9f9;
+    align-items: center;
+    border-radius: .1em;
+    box-sizing: border-box;
+    display: inline-flex;
+    justify-content: center;
+    text-align: center;
+    font-family: "Avenir Roman", sans-serif;
+    font-size: 1em;
+    letter-spacing: .08em;
+    text-transform: uppercase;
+}
+
+.button3{
+    background: #2d57ff;
+    height: 2.5em;
+    width: 16em;
+    margin-bottom: 9em;
+    margin: 1em;
+    color: #f9f9f9;
+    align-items: center;
+    border-radius: .1em;
+    box-sizing: border-box;
+    display: inline-flex;
+    justify-content: center;
+    text-align: center;
+    font-family: "Avenir Roman", sans-serif;
+    font-size: 1em;
+    letter-spacing: .08em;
+    text-transform: uppercase;
+}
+
+.logo{
+    max-width: 20em;
+    margin: 1.5em; 
+    
+}
+
+.Devices{
+    max-width: 120em;
+    margin: 1.5em; 
+}
+
+.shows{
+    max-width: 25em;
+    margin: .5em; 
+}
+
+.baixe-filmes-series{
+    background: url(https://cnbl-cdn.bamgrid.com/assets/36b498725697f2dad5b28c08358207cf7d86f6e81d5476c00d1f25f4178d4d6c/original);
+}
+
+.perguntas-frequentes{
+    text-align: center;
+}
+
+.perguntas{
+    background: #13151d;
+    height: 4em;
+    width: 70em;
+    margin: 1em;
+    color: #f9f9f9;
+    align-items: center;
+    border-radius: .1em;
+    box-sizing: border-box;
+    display: inline-flex;
+    font-family: "Avenir Roman", sans-serif;
+    font-size: 1.2em;
+    letter-spacing: .08em;
+}
+
+.pe-pagina{
+    color: #f9f9f9;
+    justify-content: center; 
+    align-items: center;
+    text-align: center;
+    font-size: .5em;
+    font-family: "Avenir Roman", sans-serif;
+    font-weight: 350;
+    letter-spacing: .05em;
+}
+
 h1{
     font-family: "Avenir Roman", sans-serif;
     font-size: 1.5em;
-    /*line-height: 38px;*/
     letter-spacing: .05em;
     color: #f9f9f9;
 }
 
+h2{
+    font-family: "Avenir Roman", sans-serif;
+    font-size: 2.5em;
+    color: #f9f9f9;
+    /* margin: 2em; */
+}
+ 
+p{
+    font-family: "Avenir Roman", sans-serif;
+    font-size: 1.3em;
+    letter-spacing: .05em;
+    color: #f9f9f9c0;
+}
