--- a/disneyplus/entrardisneyplus.css
+++ b/disneyplus/entrardisneyplus.css
@@ -8,39 +8,51 @@
     padding: 0;
 }
 
-.login{
-    background: #6525fc;
-    height: 3.5em;
-    width: 32em;
+body{
+    background-color: #070a17; 
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Avenir Roman", sans-serif;
+    color: #f9f9f9;
+}
+
+.logo{
+    max-width: 10em;
+    margin: 1.5em; 
+}
+
+.button1{
+    background: #2d57ff;
+    height: 3em;
+    width: 21em;
     margin-bottom: 9em;
     margin: 1em;
-    color: #f9f9f9;
     align-items: center;
     border-radius: .1em;
     box-sizing: border-box;
     display: inline-flex;
     justify-content: center;
     text-align: center;
-    transition: all .2s ease 0s;
     font-family: "Avenir Roman", sans-serif;
-    font-size: 1.2em;
+    font-size: 1em;
     letter-spacing: .08em;
     text-transform: uppercase;
 }
 
+.text-box{
+    height: 3em;
+    width: 21em;
+}
+
 .footnote{
-    color: #f9f9f9;
-    text-align: inherit;
     font-size: 1em;
-    font-family: Avenir,sans-serif;
     font-weight: 350;
     letter-spacing: .05em;
-    text-decoration: underline;
 }
 
 h1{
-    font-family: "Avenir Roman", sans-serif;
     font-size: 1.5em;
     letter-spacing: .05em;
-    color: #f9f9f9;
 }
